packages/starlight-theme-vintage/styles/theme.css
@layer vintage {
  /**
   * Common
   */
  :root,
  ::backdrop {
    --sl-vintage-hue-base: 294;

    --sl-hue-blue: 300;
    --sl-hue-green: 160;
    --sl-hue-orange: 81;
    --sl-hue-purple: 195;
    --sl-hue-red: 23;

    --sl-text-h1: 2.5rem; /* 40px */
    --sl-text-h2: 1.875rem; /* 30px */
    --sl-text-h3: var(--sl-text-2xl);
    --sl-text-h4: var(--sl-text-xl);
    --sl-text-h5: var(--sl-text-base);

    --sl-line-height-headings: 1.3;

    --sl-nav-height: 6rem;
  }

  @media (min-width: 50em) {
    :root {
      --sl-text-h1: 3rem; /* 48px */
      --sl-text-h2: 1.875rem; /* 30px */
      --sl-text-h3: var(--sl-text-2xl);
      --sl-text-h4: var(--sl-text-xl);
      --sl-text-h5: var(--sl-text-base);
    }
  }

  /**
   * Dark mode
   */
  :root,
  ::backdrop {
    --sl-color-white: oklch(0.9156 0.0097 var(--sl-vintage-hue-base));
    --sl-color-gray-1: oklch(0.8724 0.0148 var(--sl-vintage-hue-base));
    --sl-color-gray-2: oklch(0.8292 0.0199 var(--sl-vintage-hue-base));
    --sl-color-gray-3: oklch(0.7407 0.0307 var(--sl-vintage-hue-base));
    --sl-color-gray-4: oklch(0.8494 0.0178 var(--sl-vintage-hue-base) / 0.6);
    --sl-color-gray-5: oklch(0.958 0.0048 var(--sl-vintage-hue-base) / 0.4);
    --sl-color-gray-6: oklch(0.2784 0.048 var(--sl-vintage-hue-base));
    --sl-color-black: oklch(0.203 0.0322 var(--sl-vintage-hue-base));

    --sl-color-blue: oklch(0.5351 0.2523 var(--sl-hue-blue));
    --sl-color-blue-low: oklch(from var(--sl-color-blue) l c h / 0.4);
    --sl-color-blue-high: oklch(0.8356 0.0884 var(--sl-hue-blue));

    --sl-color-green: oklch(0.5626 0.1251 var(--sl-hue-green));
    --sl-color-green-low: oklch(from var(--sl-color-green) l c h / 0.4);
    --sl-color-green-high: oklch(0.8421 0.0822 var(--sl-hue-green));

    --sl-color-orange: oklch(0.8373 0.1618 var(--sl-hue-orange));
    --sl-color-orange-low: oklch(from var(--sl-color-orange) l c h / 0.4);
    --sl-color-orange-high: oklch(0.9345 0.0721 var(--sl-hue-orange));

    --sl-color-purple: oklch(0.7348 0.1228 var(--sl-hue-purple));
    --sl-color-purple-low: oklch(from var(--sl-color-purple) l c h / 0.4);
    --sl-color-purple-high: oklch(0.9361 0.0613 var(--sl-hue-purple));

    --sl-color-red: oklch(0.6352 0.2504 var(--sl-hue-red));
    --sl-color-red-low: oklch(from var(--sl-color-red) l c h / 0.4);
    --sl-color-red-high: oklch(0.8905 0.0902 var(--sl-hue-red));

    --sl-color-accent: oklch(0.7306 0.1783 47);
    --sl-color-accent-high: var(--sl-color-accent);
    --sl-color-accent-low: oklch(from var(--sl-color-accent) l c h / 0.05);

    --sl-color-bg: var(--sl-vintage-page-bg-color-bottom);
    --sl-color-bg-nav: var(--sl-color-gray-6);
    --sl-color-bg-sidebar: initial;
    --sl-color-bg-inline-code: oklch(1 0 0 / 0.086);

    --sl-color-hairline-light: oklch(0.958 0.0048 var(--sl-vintage-hue-base) / 0.1);

    --sl-menu-button-size: 2.25rem;

    --sl-vintage-ec-editor-tab-bar-bg-color: var(--sl-vintage-ui-accent-dimmed-bg-color);
    --sl-vintage-ec-editor-tab-bar-border-color: oklch(from var(--sl-vintage-ui-accent-bg-color) l c h / 0.2);
    --sl-vintage-ec-inline-button-border-color: var(--sl-color-gray-4);
    --sl-vintage-ec-marker-bg-color: oklch(from var(--sl-vintage-ui-accent-bg-color) l c h / 0.15);
    --sl-vintage-ec-marker-border-color: oklch(from var(--sl-vintage-ui-accent-bg-color) l c h / 0.75);
    --sl-vintage-ec-terminal-titlebar-dots-color: oklch(from var(--sl-vintage-ui-accent-bg-color) l c h / 0.3);

    --sl-vintage-page-bg-color-top: var(--sl-color-gray-6);
    --sl-vintage-page-bg-color-bottom: var(--sl-color-black);
    --sl-vintage-page-bg-color: linear-gradient(
      180deg,
      var(--sl-vintage-page-bg-color-top),
      var(--sl-vintage-page-bg-color-top) calc(var(--sl-nav-height) + var(--sl-mobile-toc-height)),
      var(--sl-vintage-page-bg-color-bottom)
    );
    --sl-vintage-page-selection-bg-color: var(--sl-vintage-ui-accent-bg-color);
    --sl-vintage-page-selection-color: var(--sl-vintage-ui-accent-color);

    --sl-vintage-ui-accent-alt-color: var(--sl-color-accent-high);
    --sl-vintage-ui-accent-bg-color: oklch(0.5351 0.2523 var(--sl-vintage-hue-base) / 0.4);
    --sl-vintage-ui-accent-dimmed-bg-color: oklch(from var(--sl-vintage-ui-accent-bg-color) l c h / 0.2);
    --sl-vintage-ui-accent-color: oklch(1 0 0);
    --sl-vintage-ui-bg-color: oklch(0.2029 0.0357 var(--sl-vintage-hue-base));
    --sl-vintage-ui-border-color: oklch(0.3422 0.0532 var(--sl-vintage-hue-base));
    --sl-vintage-ui-border-width: 1.5px;
  }

  /**
   * Light mode
   */
  :root[data-theme='light'],
  [data-theme='light'] ::backdrop {
    --sl-color-white: oklch(0.2045 0.0142 var(--sl-vintage-hue-base));
    --sl-color-gray-1: oklch(0.2975 0.02515 var(--sl-vintage-hue-base));
    --sl-color-gray-2: oklch(0.3905 0.0361 var(--sl-vintage-hue-base));
    --sl-color-gray-3: oklch(0.475 0.0459 var(--sl-vintage-hue-base));
    --sl-color-gray-4: oklch(0.50505 0.1491 var(--sl-vintage-hue-base) / 0.25);
    --sl-color-gray-5: oklch(0.5351 0.2523 var(--sl-vintage-hue-base) / 0.3);
    --sl-color-gray-6: oklch(0.9361 0.0192 var(--sl-vintage-hue-base));
    --sl-color-gray-7: oklch(0.9663 0.01045 var(--sl-vintage-hue-base));
    --sl-color-black: oklch(0.9965 0.0017 var(--sl-vintage-hue-base));

    --sl-color-blue-low: oklch(from var(--sl-color-blue) l c h / 0.1);
    --sl-color-blue-high: oklch(0.2717 0.1293 var(--sl-hue-blue));

    --sl-color-green-low: oklch(from var(--sl-color-green) l c h / 0.1);
    --sl-color-green-high: oklch(0.3812 0.1612 var(--sl-hue-green));

    --sl-color-orange-low: oklch(from var(--sl-color-orange) l c h / 0.1);
    --sl-color-orange-high: oklch(0.4184 0.087059 var(--sl-hue-orange));

    --sl-color-purple-low: oklch(from var(--sl-color-purple) l c h / 0.1);
    --sl-color-purple-high: oklch(0.4307 0.0705 var(--sl-hue-purple));

    --sl-color-red-low: oklch(from var(--sl-color-red) l c h / 0.1);
    --sl-color-red-high: oklch(0.322 0.129961 var(--sl-hue-red));

    --sl-color-accent: oklch(0.4945 0.1912 350);

    --sl-color-backdrop-overlay: oklch(84% 0.003 var(--sl-vintage-hue-base) / 0.4);

    --sl-color-bg-inline-code: var(--sl-color-hairline-light);

    --sl-color-hairline-light: var(--sl-vintage-ui-accent-bg-color);

    --sl-vintage-ec-editor-tab-bar-bg-color: oklch(0.3351 0.2523 var(--sl-vintage-hue-base) / 0.15);
    --sl-vintage-ec-editor-tab-bar-border-color: oklch(from var(--sl-vintage-ui-accent-bg-color) l c h / 0.15);
    --sl-vintage-ec-inline-button-border-color: var(--sl-color-gray-3);
    --sl-vintage-ec-marker-bg-color: oklch(0.5351 0.2523 var(--sl-vintage-hue-base) / 0.2);
    --sl-vintage-ec-terminal-titlebar-dots-color: oklch(from var(--sl-vintage-ui-accent-bg-color) l c h / 0.2);

    --sl-vintage-page-bg-color: linear-gradient(
      180deg,
      var(--sl-vintage-page-bg-color-top),
      var(--sl-vintage-page-bg-color-top) calc(var(--sl-nav-height) + var(--sl-mobile-toc-height)),
      var(--sl-vintage-page-bg-color-bottom)
    );
    --sl-vintage-page-selection-color: oklch(from var(--sl-color-gray-5) l c h / 1);

    --sl-vintage-ui-accent-alt-color: oklch(0.6854 0.2108 41);
    --sl-vintage-ui-accent-bg-color: oklch(from var(--sl-color-gray-5) l c h / 0.1);
    --sl-vintage-ui-accent-dimmed-bg-color: oklch(from var(--sl-color-gray-5) l c h / 0.075);
    --sl-vintage-ui-accent-color: oklch(0.2045 0.0142 var(--sl-vintage-hue-base));
    --sl-vintage-ui-hue-base: calc(var(--sl-vintage-hue-base) + 12);
    --sl-vintage-ui-bg-color: oklch(0.9374 0.0233 var(--sl-vintage-ui-hue-base));
    --sl-vintage-ui-border-color: oklch(0.81646 0.0627 var(--sl-vintage-ui-hue-base));
  }
}

